@@ -24,7 +24,7 @@
 function wfExportGetPagesFromCategory( $title ) {
 	global $wgContLang;
 
-	$name = $title->getDBKey();
+	$name = $title->getDBkey();
 
 	$dbr = wfGetDB( DB_SLAVE );
 
